PascalSParser.cpp

// Generated from PascalS.g4 by ANTLR 4.9.2


#include "PascalSListener.h"

#include "PascalSParser.h"


using namespace antlrcpp;
using namespace antlr4;

PascalSParser::PascalSParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

PascalSParser::~PascalSParser() {
  delete _interpreter;
}

std::string PascalSParser::getGrammarFileName() const {
  return "PascalS.g4";
}

const std::vector<std::string>& PascalSParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& PascalSParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- AssignopContext ------------------------------------------------------------------

PascalSParser::AssignopContext::AssignopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PascalSParser::AssignopContext::getRuleIndex() const {
  return PascalSParser::RuleAssignop;
}

void PascalSParser::AssignopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignop(this);
}

void PascalSParser::AssignopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignop(this);
}

PascalSParser::AssignopContext* PascalSParser::assignop() {
  AssignopContext *_localctx = _tracker.createInstance<AssignopContext>(_ctx, getState());
  enterRule(_localctx, 0, PascalSParser::RuleAssignop);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    match(PascalSParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RelopContext ------------------------------------------------------------------

PascalSParser::RelopContext::RelopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PascalSParser::RelopContext::getRuleIndex() const {
  return PascalSParser::RuleRelop;
}

void PascalSParser::RelopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRelop(this);
}

void PascalSParser::RelopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRelop(this);
}

PascalSParser::RelopContext* PascalSParser::relop() {
  RelopContext *_localctx = _tracker.createInstance<RelopContext>(_ctx, getState());
  enterRule(_localctx, 2, PascalSParser::RuleRelop);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << PascalSParser::T__1)
      | (1ULL << PascalSParser::T__2)
      | (1ULL << PascalSParser::T__3)
      | (1ULL << PascalSParser::T__4)
      | (1ULL << PascalSParser::T__5)
      | (1ULL << PascalSParser::T__6))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AddopContext ------------------------------------------------------------------

PascalSParser::AddopContext::AddopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PascalSParser::AddopContext::getRuleIndex() const {
  return PascalSParser::RuleAddop;
}

void PascalSParser::AddopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAddop(this);
}

void PascalSParser::AddopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAddop(this);
}

PascalSParser::AddopContext* PascalSParser::addop() {
  AddopContext *_localctx = _tracker.createInstance<AddopContext>(_ctx, getState());
  enterRule(_localctx, 4, PascalSParser::RuleAddop);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << PascalSParser::T__7)
      | (1ULL << PascalSParser::T__8)
      | (1ULL << PascalSParser::T__9))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MulopContext ------------------------------------------------------------------

PascalSParser::MulopContext::MulopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PascalSParser::MulopContext::getRuleIndex() const {
  return PascalSParser::RuleMulop;
}

void PascalSParser::MulopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMulop(this);
}

void PascalSParser::MulopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMulop(this);
}

PascalSParser::MulopContext* PascalSParser::mulop() {
  MulopContext *_localctx = _tracker.createInstance<MulopContext>(_ctx, getState());
  enterRule(_localctx, 6, PascalSParser::RuleMulop);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << PascalSParser::T__10)
      | (1ULL << PascalSParser::T__11)
      | (1ULL << PascalSParser::T__12)
      | (1ULL << PascalSParser::T__13)
      | (1ULL << PascalSParser::T__14))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

PascalSParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PascalSParser::Program_headContext* PascalSParser::ProgramContext::program_head() {
  return getRuleContext<PascalSParser::Program_headContext>(0);
}

PascalSParser::Program_bodyContext* PascalSParser::ProgramContext::program_body() {
  return getRuleContext<PascalSParser::Program_bodyContext>(0);
}


size_t PascalSParser::ProgramContext::getRuleIndex() const {
  return PascalSParser::RuleProgram;
}

void PascalSParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void PascalSParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

PascalSParser::ProgramContext* PascalSParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 8, PascalSParser::RuleProgram);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    program_head();
    setState(103);
    program_body();
    setState(104);
    match(PascalSParser::T__15);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Program_headContext ------------------------------------------------------------------

PascalSParser::Program_headContext::Program_headContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PascalSParser::Program_headContext::ID() {
  return getToken(PascalSParser::ID, 0);
}

PascalSParser::Identifier_listContext* PascalSParser::Program_headContext::identifier_list() {
  return getRuleContext<PascalSParser::Identifier_listContext>(0);
}


size_t PascalSParser::Program_headContext::getRuleIndex() const {
  return PascalSParser::RuleProgram_head;
}

void PascalSParser::Program_headContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram_head(this);
}

void PascalSParser::Program_headContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram_head(this);
}

PascalSParser::Program_headContext* PascalSParser::program_head() {
  Program_headContext *_localctx = _tracker.createInstance<Program_headContext>(_ctx, getState());
  enterRule(_localctx, 10, PascalSParser::RuleProgram_head);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(PascalSParser::T__16);
    setState(107);
    match(PascalSParser::ID);
    setState(108);
    match(PascalSParser::T__17);
    setState(109);
    identifier_list(0);
    setState(110);
    match(PascalSParser::T__18);
    setState(111);
    match(PascalSParser::T__19);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Program_bodyContext ------------------------------------------------------------------

PascalSParser::Program_bodyContext::Program_bodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PascalSParser::Const_declarationsContext* PascalSParser::Program_bodyContext::const_declarations() {
  return getRuleContext<PascalSParser::Const_declarationsContext>(0);
}

PascalSParser::Type_declarationsContext* PascalSParser::Program_bodyContext::type_declarations() {
  return getRuleContext<PascalSParser::Type_declarationsContext>(0);
}

PascalSParser::Var_declarationsContext* PascalSParser::Program_bodyContext::var_declarations() {
  return getRuleContext<PascalSParser::Var_declarationsContext>(0);
}

PascalSParser::Subprogram_declarationsContext* PascalSParser::Program_bodyContext::subprogram_declarations() {
  return getRuleContext<PascalSParser::Subprogram_declarationsContext>(0);
}

PascalSParser::Compound_statementContext* PascalSParser::Program_bodyContext::compound_statement() {
  return getRuleContext<PascalSParser::Compound_statementContext>(0);
}


size_t PascalSParser::Program_bodyContext::getRuleIndex() const {
  return PascalSParser::RuleProgram_body;
}

void PascalSParser::Program_bodyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram_body(this);
}

void PascalSParser::Program_bodyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram_body(this);
}

PascalSParser::Program_bodyContext* PascalSParser::program_body() {
  Program_bodyContext *_localctx = _tracker.createInstance<Program_bodyContext>(_ctx, getState());
  enterRule(_localctx, 12, PascalSParser::RuleProgram_body);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    const_declarations();
    setState(114);
    type_declarations();
    setState(115);
    var_declarations();
    setState(116);
    subprogram_declarations(0);
    setState(117);
    compound_statement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Identifier_listContext ------------------------------------------------------------------

PascalSParser::Identifier_listContext::Identifier_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PascalSParser::Identifier_listContext::getRuleIndex() const {
  return PascalSParser::RuleIdentifier_list;
}

void PascalSParser::Identifier_listContext::copyFrom(Identifier_listContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- MultiMainArgContext ------------------------------------------------------------------

PascalSParser::Identifier_listContext* PascalSParser::MultiMainArgContext::identifier_list() {
  return getRuleContext<PascalSParser::Identifier_listContext>(0);
}

tree::TerminalNode* PascalSParser::MultiMainArgContext::ID() {
  return getToken(PascalSParser::ID, 0);
}

PascalSParser::MultiMainArgContext::MultiMainArgContext(Identifier_listContext *ctx) { copyFrom(ctx); }

void PascalSParser::MultiMainArgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMultiMainArg(this);
}
void PascalSParser::MultiMainArgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMultiMainArg(this);
}
//----------------- MainArgContext ------------------------------------------------------------------

tree::TerminalNode* PascalSParser::MainArgContext::ID() {
  return getToken(PascalSParser::ID, 0);
}

PascalSParser::MainArgContext::MainArgContext(Identifier_listContext *ctx) { copyFrom(ctx); }

void PascalSParser::MainArgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMainArg(this);
}
void PascalSParser::MainArgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMainArg(this);
}

PascalSParser::Identifier_listContext* PascalSParser::identifier_list() {
   return identifier_list(0);
}

PascalSParser::Identifier_listContext* PascalSParser::identifier_list(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  PascalSParser::Identifier_listContext *_localctx = _tracker.createInstance<Identifier_listContext>(_ctx, parentState);
  PascalSParser::Identifier_listContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 14;
  enterRecursionRule(_localctx, 14, PascalSParser::RuleIdentifier_list, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    _localctx = _tracker.createInstance<MainArgContext>(_localctx);
    _ctx = _localctx;
    previousContext = _localctx;

    setState(120);
    match(PascalSParser::ID);
    _ctx->stop = _input->LT(-1);
    setState(127);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        auto newContext = _tracker.createInstance<MultiMainArgContext>(_tracker.createInstance<Identifier_listContext>(parentContext, parentState));
        _localctx = newContext;
        pushNewRecursionContext(newContext, startState, RuleIdentifier_list);
        setState(122);

        if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
        setState(123);
        match(PascalSParser::T__20);
        setState(124);
        match(PascalSParser::ID); 
      }
      setState(129);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- Const_declarationsContext ------------------------------------------------------------------

PascalSParser::Const_declarationsContext::Const_declarationsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PascalSParser::Const_declarationContext* PascalSParser::Const_declarationsContext::const_declaration() {
  return getRuleContext<PascalSParser::Const_declarationContext>(0);
}


size_t PascalSParser::Const_declarationsContext::getRuleIndex() const {
  return PascalSParser::RuleConst_declarations;
}

void PascalSParser::Const_declarationsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConst_declarations(this);
}

void PascalSParser::Const_declarationsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConst_declarations(this);
}

PascalSParser::Const_declarationsContext* PascalSParser::const_declarations() {
  Const_declarationsContext *_localctx = _tracker.createInstance<Const_declarationsContext>(_ctx, getState());
  enterRule(_localctx, 16, PascalSParser::RuleConst_declarations);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(135);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(130);
      match(PascalSParser::T__21);
      setState(131);
      const_declaration(0);
      setState(132);
      match(PascalSParser::T__19);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);

      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Const_declarationContext ------------------------------------------------------------------

PascalSParser::Const_declarationContext::Const_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PascalSParser::Const_declarationContext::getRuleIndex() const {
  return PascalSParser::RuleConst_declaration;
}

void PascalSParser::Const_declarationContext::copyFrom(Const_declarationContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- SingleConstDeclarationContext ------------------------------------------------------------------

tree::TerminalNode* PascalSParser::SingleConstDeclarationContext::ID() {
  return getToken(PascalSParser::ID, 0);
}

PascalSParser::Const_variableContext* PascalSParser::SingleConstDeclarationContext::const_variable() {
  return getRuleContext<PascalSParser::Const_variableContext>(0);
}

PascalSParser::SingleConstDeclarationContext::SingleConstDeclarationContext(Const_declarationContext *ctx) { copyFrom(ctx); }

void PascalSParser::SingleConstDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSingleConstDeclaration(this);
}
void PascalSParser::SingleConstDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSingleConstDeclaration(this);
}
//----------------- MultiConstDeclarationContext ------------------------------------------------------------------

std::vector<PascalSParser::Const_declarationContext *> PascalSParser::MultiConstDeclarationContext::const_declaration() {
  return getRuleContexts<PascalSParser::Const_declarationContext>();
}

PascalSParser::Const_declarationContext* PascalSParser::MultiConstDeclarationContext::const_declaration(size_t i) {
  return getRuleContext<PascalSParser::Const_declarationContext>(i);
}

PascalSParser::MultiConstDeclarationContext::MultiConstDeclarationContext(Const_declarationContext *ctx) { copyFrom(ctx); }

void PascalSParser::MultiConstDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMultiConstDeclaration(this);
}
void PascalSParser::MultiConstDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMultiConstDeclaration(this);
}

PascalSParser::Const_declarationContext* PascalSParser::const_declaration() {
   return const_declaration(0);
}

PascalSParser::Const_declarationContext* PascalSParser::const_declaration(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  PascalSParser::Const_declarationContext *_localctx = _tracker.createInstance<Const_declarationContext>(_ctx, parentState);
  PascalSParser::Const_declarationContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 18;
  enterRecursionRule(_localctx, 18, PascalSParser::RuleConst_declaration, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    _localctx = _tracker.createInstance<SingleConstDeclarationContext>(_localctx);
    _ctx = _localctx;
    previousContext = _localctx;

    setState(138);
    match(PascalSParser::ID);
    setState(139);
    match(PascalSParser::T__6);
    setState(140);
    const_variable();
    _ctx->stop = _input->LT(-1);
    setState(147);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        auto newContext = _tracker.createInstance<MultiConstDeclarationContext>(_tracker.createInstance<Const_declarationContext>(parentContext, parentState));
        _localctx = newContext;
        pushNewRecursionContext(newContext, startState, RuleConst_declaration);
        setState(142);

        if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
        setState(143);
        match(PascalSParser::T__19);
        setState(144);
        const_declaration(3); 
      }
      setState(149);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- Const_variableContext ------------------------------------------------------------------

PascalSParser::Const_variableContext::Const_variableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PascalSParser::Const_variableContext::getRuleIndex() const {
  return PascalSParser::RuleConst_variable;
}

void PascalSParser::Const_variableContext::copyFrom(Const_variableContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- PositiveIdContext ------------------------------------------------------------------

tree::TerminalNode* PascalSParser::PositiveIdContext::ID() {
  return getToken(PascalSParser::ID, 0);
}

PascalSParser::PositiveIdContext::PositiveIdContext(Const_variableContext *ctx) { copyFrom(ctx); }

void PascalSParser::PositiveIdContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPositiveId(this);
}
void PascalSParser::PositiveIdContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPositiveId(this);
}
//----------------- ConstCharContext ------------------------------------------------------------------

tree::TerminalNode* PascalSParser::ConstCharContext::CONST_CHAR() {
  return getToken(PascalSParser::CONST_CHAR, 0);
}

PascalSParser::ConstCharContext::ConstCharContext(Const_variableContext *ctx) { copyFrom(ctx); }

void PascalSParser::ConstCharContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstChar(this);
}
void PascalSParser::ConstCharContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstChar(this);
}
//----------------- PositiveNumberContext ------------------------------------------------------------------
